--- a/article/refs.bib
+++ b/article/refs.bib
@@ -28,3 +28,33 @@
   title={Upload homework to github gists as IPython Notebooks (YouTube)},
   howpublished={\url{http://www.youtube.com/watch?v=YY0Bff5PoKI}}
 }
+
+@misc{mm,
+  title={Mathematica Notebook Technology},
+  howpublished={\url{http://www.wolfram.com/technology/nb/}}
+}
+
+@misc{py,
+  title={Scientific Tools for Python},
+  howpublished={\url{http://www.scipy.org/}}
+}
+
+@misc{ec2,
+  title={Amazon Elastic Compute Cloud},
+  howpublished={\url{http://aws.amazon.com/ec2/}}
+}
+
+@misc{azure,
+  title={A rock-solid cloud platform for blue-sky thinking},
+  howpublished={\url{https://www.windowsazure.com/en-us/}}
+}
+
+@misc{sage,
+  title={Sage is a different approach to mathematics software},
+  howpublished={\url{http://www.sagenb.org/}}
+}
+
+@misc{gh,
+  title={Github: Social Coding},
+  howpublished={\url{https://github.com/}}
+}
